# Yap

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build.sh  setup.sh
docs/: ui-design.md
src-backend/: .env.example  main.py  pyproject.toml  vocistant-backend.spec
src-backend/core/: __init__.py  asr_engine.py  audio_capture.py  config.py  history_store.py  llm_corrector.py  llm_translator.py  log_handler.py  model_manager.py  pipeline.py  recording_session.py  text_input.py  vad_engine.py  waveform_analyzer.py
src-backend/hooks/: hook-mlx.py  hook-mlx_audio.py  hook-silero_vad.py
src-backend/tests/: test_streaming_asr.py
src-frontend/: .env.example  index.html  package-lock.json  package.json  settings.html  vite.config.ts
src-frontend/src/: App.vue  SettingsWindow.vue  main.ts  settings.ts  style.css
src-frontend/src/components/: FloatingBall.vue  FloatingBallV2.vue  MessagePanel.vue  SettingsPanel.vue  StatusPanel.vue
src-frontend/src/constants/: index.ts
src-frontend/src/i18n/: index.ts
src-frontend/src/i18n/locales/: en.ts  zh.ts
src-frontend/src/services/: bridge.ts  logController.ts  portService.ts  signalController.ts  waveformController.ts
src-frontend/src/stores/: appState.ts
src-frontend/src/views/: Settings.vue
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: Fix Security.command
src-tauri/src/: lib.rs  main.rs
