[project]
name = "vocistant-ai"
version = "0.1.0"
description = "Vocistant AI Backend - Voice Assistant with VAD and ASR"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.6",
    "silero-vad>=5.1",
    "mlx-audio>=0.2.10",
    "mlx-audio-plus>=0.1.8",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "socksio>=1.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
